--- a/calculator/pom.xml
+++ b/calculator/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>calculator</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+
 	<name>calculator</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
@@ -28,6 +29,18 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<springfox.boot.version>3.0.0</springfox.boot.version>
+		<lombok.version>1.18.30</lombok.version>
+		<springdoc.openapi.version>1.6.15</springdoc.openapi.version>
+		<slf4j.api.version>2.0.16</slf4j.api.version>
+		<logback.classic.version>1.4.6</logback.classic.version>
+		<mockito.core.version>5.12.0</mockito.core.version>
+		<mockito.junit.jupiter.version>5.12.0</mockito.junit.jupiter.version>
+		<spring.test.versoin>6.1.13</spring.test.versoin>
+		<mockito.inline.version>4.0.0</mockito.inline.version>
+		<json.path.version>2.5.0</json.path.version>
+		<spring.boot.validation.version>3.3.3</spring.boot.validation.version>
+		<jackson.jsr310.version>2.18.1</jackson.jsr310.version>
 	</properties>
 
 	<dependencies>
@@ -39,48 +52,48 @@
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-boot-starter</artifactId>
-			<version>3.0.0</version>
+			<version>${springfox.boot.version}</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.30</version>
+			<version>${lombok.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>1.6.15</version>
+			<version>${springdoc.openapi.version}</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>2.0.16</version>
+			<version>${slf4j.api.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.4.6</version> <!-- или другая версия -->
+			<version>${logback.classic.version}</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>5.12.0</version>
+			<version>${mockito.core.version}</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-junit-jupiter</artifactId>
-			<version>5.12.0</version>
+			<version>${mockito.junit.jupiter.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -88,14 +101,14 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>6.1.13</version>
+			<version>${spring.test.versoin}</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-inline</artifactId>
-			<version>4.0.0</version>
+			<version>${mockito.inline.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
@@ -108,20 +121,20 @@
 		<dependency>
 			<groupId>com.jayway.jsonpath</groupId>
 			<artifactId>json-path</artifactId>
-			<version>2.5.0</version>
+			<version>${json.path.version}</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
-			<version>3.3.3</version>
+			<version>${spring.boot.validation.version}</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-jsr310</artifactId>
-			<version>2.18.1</version>
+			<version>${jackson.jsr310.version}</version>
 		</dependency>
 
 	</dependencies>
