--- a/deal/src/main/resources/application.properties
+++ b/deal/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/deal
 spring.datasource.username=postgres
 spring.datasource.password=5117
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -21,6 +23,8 @@ logging.level.org.apache.http.wire=DEBUG
 
 spring.jackson.date-format=yyyy-MM-dd
 spring.jackson.time-zone=UTC
+
+
 
 logging.level.root=INFO
 logging.level.com.example=DEBUG
