--- a/deal/src/main/resources/application.properties
+++ b/deal/src/main/resources/application.properties
@@ -24,6 +24,15 @@ logging.level.org.apache.http.wire=DEBUG
 spring.jackson.date-format=yyyy-MM-dd
 spring.jackson.time-zone=UTC
 
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+
+
+springdoc.swagger-ui.path=/swagger-ui.html
+spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
+
+
+
 
 
 logging.level.root=INFO
