--- a/calculator/src/main/resources/application.properties
+++ b/calculator/src/main/resources/application.properties
@@ -3,4 +3,11 @@ loan.base-rate=10.0
 logging.level.root=INFO
 server.port = ${SERVER_PORT:8080}
 
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+
+springdoc.swagger-ui.path=/swagger-ui.html
+spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
+
+
 
