--- a/calculator/pom.xml
+++ b/calculator/pom.xml
@@ -2,16 +2,18 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.5</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>com.example</groupId>
+		<artifactId>CreditBank</artifactId>
+		<version>1.0.0</version> <!-- Укажите версию родительского pom -->
+		<relativePath>../pom.xml</relativePath> <!-- Путь к родительскому pom -->
 	</parent>
+
 	<groupId>com.example</groupId>
 	<artifactId>calculator</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>calculator</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Calculator module for CreditBank</description>
+
 	<properties>
 		<java.version>21</java.version>
 	</properties>
