--- a/deal/src/main/resources/application.properties
+++ b/deal/src/main/resources/application.properties
@@ -34,3 +34,7 @@ logging.level.root=INFO
 logging.level.com.example=DEBUG
 server.port = ${SERVER_PORT:8082}
 
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
