--- a/deal/pom.xml
+++ b/deal/pom.xml
@@ -14,6 +14,9 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>21</java.version>
+		<springdoc.openapi.version>2.6.0</springdoc.openapi.version>
+		<swagger.annotation.version>2.2.26</swagger.annotation.version>
+		<spring.cloud.starter.version>4.1.3</spring.cloud.starter.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -40,7 +43,7 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.6.0</version>
+			<version>${springdoc.openapi.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
@@ -59,8 +62,15 @@
 		<dependency>
 			<groupId>io.swagger.core.v3</groupId>
 			<artifactId>swagger-annotations</artifactId>
-			<version>2.2.26</version>
+			<version>${swagger.annotation.version}</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<version>${spring.cloud.starter.version}</version>
+		</dependency>
+
 
 	</dependencies>
 	<build>
