--- a/deal/pom.xml
+++ b/deal/pom.xml
@@ -17,6 +17,7 @@
 		<springdoc.openapi.version>2.6.0</springdoc.openapi.version>
 		<swagger.annotation.version>2.2.26</swagger.annotation.version>
 		<spring.cloud.starter.version>4.1.3</spring.cloud.starter.version>
+		<spring.validation.version>3.3.3</spring.validation.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -69,6 +70,12 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 			<version>${spring.cloud.starter.version}</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>${spring.validation.version}</version>
 		</dependency>
 
 
