--- a/statement/src/main/resources/application.properties
+++ b/statement/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=statement
 
-deal.service.statement.base-url=http://localhost:8082/deal/statement
-deal.service.offer.base-url=http://localhost:8082/deal/offer/select
 
+deal.service.base-url=http://localhost:8082/deal
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/deal
-spring.datasource.username=postgres
-spring.datasource.password=5117
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/deal}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:5117}
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 server.port = ${SERVER_PORT:8083}
