--- a/statement/src/main/resources/application.properties
+++ b/statement/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=statement
 
 
-deal.service.base-url=http://localhost:8082/deal
+deal.service.base-url=http://localhost:${SERVER_PORT:8082}/deal
+
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
@@ -10,6 +11,9 @@ springdoc.swagger-ui.path=/swagger-ui.html
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/deal}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:5117}
+
+deal.service.offer-select=/offer/select
+deal.service.statement=/statement
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
