fix service base url

--- a/statement/src/main/resources/application.properties
+++ b/statement/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=statement
 
 
-deal.service.base-url=http://localhost:${SERVER_PORT:8082}/deal
+deal.service.base-url=${Server_url:http://localhost:8082}/deal
 
 
 springdoc.api-docs.enabled=true
