--- a/deal/pom.xml
+++ b/deal/pom.xml
@@ -77,6 +77,10 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>${spring.validation.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
 
 
 	</dependencies>
