--- a/dossier/src/main/resources/application.properties
+++ b/dossier/src/main/resources/application.properties
@@ -1,13 +1,30 @@
 spring.application.name=dossier
 
-spring.mail.host=smtp.example.com
+# Email Configuration
+spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=mail@example.com
-spring.mail.password=1122
+spring.mail.username=neostudytest@gmail.com
+spring.mail.password=jjol lbxv whpj ojbm
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.kafka.consumer.bootstrap-servers=localhost:9092
-spring.kafka.consumer.group-id=my-group
+
+# Kafka Configuration
+spring.kafka.bootstrap-servers=${BOOTSTRAP-SERVERS:localhost:9092}
+spring.kafka.consumer.group-id=dossier-consumer-group
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=com.example.dossier.dto,com.example.deal.dto,*
+
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/deal}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:5117}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+# Server Configuration
+server.port=${SERVER_PORT:8085}
