--- a/deal/src/main/resources/application.properties
+++ b/deal/src/main/resources/application.properties
@@ -11,11 +11,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-
 calculator.base-url=http://localhost:${SERVER_PORT:8079}/calculator
 calculator.service-offers=/offers
 calculator.service-calc=/calc
-
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.http=DEBUG
@@ -39,4 +37,4 @@ server.port = ${SERVER_PORT:8082}
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-
+spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
