--- a/deal/src/main/resources/application.properties
+++ b/deal/src/main/resources/application.properties
@@ -37,4 +37,5 @@ server.port = ${SERVER_PORT:8082}
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+spring.kafka.bootstrap-servers=localhost:9092
+
