--- a/dossier/pom.xml
+++ b/dossier/pom.xml
@@ -15,6 +15,8 @@
 	<properties>
 		<java.version>21</java.version>
 		<kafka.version>3.9.0</kafka.version>
+		<jakarta.mail.version>2.1.3</jakarta.mail.version>
+		<dotenv.version>3.0.0</dotenv.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -63,8 +65,15 @@
 		<dependency>
 			<groupId>jakarta.mail</groupId>
 			<artifactId>jakarta.mail-api</artifactId>
-			<version>2.1.3</version>
+			<version>${jakarta.mail.version}</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.github.cdimascio/dotenv-java -->
+		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>dotenv-java</artifactId>
+			<version>${dotenv.version}</version>
+		</dependency>
+
 
 	</dependencies>
 
