--- a/dossier/src/main/resources/application.properties
+++ b/dossier/src/main/resources/application.properties
@@ -3,8 +3,9 @@ spring.application.name=dossier
 # Email Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=neostudytest@gmail.com
-spring.mail.password=jjol lbxv whpj ojbm
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
