mvp4 second fix

--- a/deal/src/main/resources/application.properties
+++ b/deal/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-calculator.base-url=http://localhost:${SERVER_PORT:8079}/calculator
+calculator.base-url=${CALCULATOR_SERVER_URL:http://localhost:8079/calculator}
 calculator.service-offers=/offers
 calculator.service-calc=/calc
 
